added locale to getStatus()